--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,54 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap');
+
+                                      /* GLOBAL CSS */
+body{
+  background-color: #f6f6f6!important;
+  font-family: 'Crimson Text', serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.topMargin{
+  margin-top: 100px;
+}
+.span{
+  color:#e74c3c;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+
+/* NAVBAR CSS */
+.menu{
+  background-color: #fff!important;
+  margin: 60px 0px;
+}
+
+.menuHead{
+  font-size: 18px;
+  margin :30px 0px;
+}
+.menuItem{
+  padding:20px;
+}
+.menuItem:hover{
+  color:#e74c3c!important;
+}
+
+
+
+
+                                      /* SKILLS PAGE CSS */
+
+                                      /* WORK EXPERINCE  */
+
+                                        /* PORTFOLIO CSS */
+
+                                        /* CONTACT CSS */
+
+
+
+@media screen and (max-width:768px){
+  .menu{
+    margin-top: 0px !important;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+  .topMargin{
+    margin-top: 0px!important;
   }
 }
